<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="_2_10" translatable="false">2/10</string>
    <string name="Question" translatable="false">Вопрос:</string>
    <!--    <string name="app_name">Practicum Project</string> -->
    <string name="title_hello">Привет, Практикум</string>
    <string name="Search">Поиск</string>
    <string name="Mediateka">Медиатека</string>
    <string name="Settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="msg_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="arrow_left">left arrow</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="developer_email">nezerbug1@yandex.ru</string>
    <string name="input_hint">Поиск</string>
    <string name="Error404">Ошибка 404</string>
    <string name="networkErrorText1">Проблемы со связью</string>
    <string name="networkErrorText2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="NoResultsErrorText">Ничего не нашлось</string>
    <string name="reloadButton">Обновить</string>
    <string name="error400">Неверный запрос</string>
    <string name="error403">Доступ запрещен</string>
    <string name="error500">Ошибка на сервере</string>
    <string name="errorUnknown">Неизвестная ошибка</string>
    <string name="errorNetwork">Ошибка сети</string>
    <string name="You_ve_searched">Вы искали</string>
    <string name="Clear_history">Очистить историю</string>



    <!--audioplayer-->

    <string name="country_title">Страна</string>
    <string name="genre_title">Жанр</string>
    <string name="year_title">Год</string>
    <string name="album_title">Альбом</string>
    <string name="duration_title">Длительность</string>

    <string name="country_check_value">Japan</string>
    <string name="genre_check_value">J-Rock</string>
    <string name="year_check_value">2017</string>
    <string name="album_check_value">Kinjito</string>
    <string name="duration_check_value">3:22</string>

    <string name="track_duration_check_value">00:00</string>

    <string name="play_button_description">Воспроизведение</string>
    <string name="add_button_description">Добавить</string>
    <string name="favorites_button_description">Избранное</string>
    <string name="arrow_back_button_description">Назад</string>

</resources>