<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arrow_left"
        android:padding="8dp"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:tint="@color/black"
        app:title="@string/Settings"
        app:titleTextAppearance="@style/HeaderTextStyle" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/SettingsMenuButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="60dp"
        android:text="@string/dark_theme"
        app:thumbTint="@color/switch_color_thumb_tint"
        app:trackTint="@color/switch_color_track_tint" />

    <TextView
        android:id="@+id/button_share"
        style="@style/SettingsMenuButtons"
        android:layout_width="match_parent"
        android:text="@string/share_app"
        android:tint="@color/purple_200"
        app:drawableEndCompat="@drawable/ic_share"
        app:tint="@color/purple_200" />

    <TextView
        android:id="@+id/button_support"
        style="@style/SettingsMenuButtons"
        android:layout_width="match_parent"
        android:text="@string/msg_support"
        app:drawableEndCompat="@drawable/ic_msg_support" />

    <TextView
        android:id="@+id/button_user_agreement"
        style="@style/SettingsMenuButtons"
        android:layout_width="match_parent"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/ic_arrow_forward" />

</LinearLayout>