<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="@dimen/button_padding">

    <TextView
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingBottom="@dimen/button_padding"
        android:text="@string/app_name"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_search"
            style="@style/WhiteButtonStyle"
            android:text="@string/Search"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconSize="@dimen/icon_size"
            app:iconTint="@android:color/black" />

        <Button
            android:id="@+id/button_media"
            style="@style/WhiteButtonStyle"
            android:text="@string/Mediateka"
            app:icon="@drawable/ic_playlist"
            app:iconGravity="textStart"
            app:iconSize="@dimen/icon_size"
            app:iconTint="@android:color/black" />

        <Button
            android:id="@+id/button_settings"
            style="@style/WhiteButtonStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/Settings"
            app:icon="@drawable/ic_settings_gear"
            app:iconGravity="textStart"
            app:iconSize="@dimen/icon_size"
            app:iconTint="@android:color/black" />

        <!--        android:drawablePadding="8dp"-->

    </LinearLayout>

</LinearLayout>
