<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arrow_left"
        android:padding="8dp"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:tint="@color/black"
        app:title="@string/Search"
        app:titleTextAppearance="@style/HeaderTextStyle" />


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_padding_16dp"
        android:background="@drawable/rounded_corners"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/inputEditText"
            style="@style/TrackTitleStyle"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="@dimen/medium_padding_8dp"
            android:hint="@string/input_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/medium_padding_8dp"
            android:paddingStart="14dp"
            android:singleLine="true"
            android:textColor="#1A1B22"
            android:textColorHint="@color/YP_light_gray_text"
            android:textCursorDrawable="@drawable/ic_cursor_blue"
            app:drawableStartCompat="@drawable/ic_search_gray" />


        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="@dimen/clear_icon_scale"
            android:layout_height="@dimen/clear_icon_scale"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/medium_padding_8dp"
            android:src="@drawable/ic_clear_button"
            android:visibility="gone"
            app:tint="@color/clear_icon" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/imageNetworkErrorXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/paddingErrorImage_80dp"
        android:visibility="gone"

        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_network_error" />

        <TextView
            style="@style/ErrorSearchActivityTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/networkErrorText1" />

        <TextView
            style="@style/ErrorSearchActivityTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/networkErrorText2" />

        <Button
            android:id="@+id/refreshButton"
            style="@style/RefreshButtonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRefreshClick"
            android:text="@string/reloadButton" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/imageNoResultsErrorXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/paddingErrorImage_80dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium_padding_8dp"
            android:src="@drawable/image_no_results_error" />

        <TextView
            style="@style/ErrorSearchActivityTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoResultsErrorText"
            android:textAppearance="?attr/textAppearanceHeadline6" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/containerRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchHistoryTitle"
            style="@style/ErrorSearchActivityTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/You_ve_searched"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackListRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/clearHistoryButton"
            style="@style/RefreshButtonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:text="@string/Clear_history"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>
